chore: update logos in header and footer, add favicon, hide footer section

--- a/index.html
+++ b/index.html
@@ -3,7 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title></title>
+    <link
+      rel="shortcut icon"
+      href="images/logos/favicon.ico"
+      type="image/x-icon"
+    />
     <!-- ! Tailwind config -->
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
@@ -57,7 +62,7 @@
           <a href="#contact-section"
             ><img
               class="object-contain w-8"
-              src="images/Desktop/HERO+Modal/logo.webp"
+              src="images/logos/logo_purple_header0.png"
               alt="Logo"
           /></a>
           <span class="dyn-name font-semibold text-white"></span>
@@ -97,7 +102,7 @@
             <button href="#contact-section">
               <img
                 class="object-contain w-10"
-                src="images/Desktop/HERO+Modal/logo.webp"
+                src="images/logos/logo_purple_header0.png"
                 alt="Logo"
               />
             </button>
@@ -1527,7 +1532,7 @@
               </div>
 
               <div class="carousel-controls" id="contact-ref">
-                <button class="prev-btn prev-btn-1">
+                <button class="prev-btn prev-btn-1 z-30">
                   <img
                     src="data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHdpZHRoPSI1MCIgaGVpZ2h0PSI1MCIgdmlld0JveD0iMCAwIDI0IDI0Ij48cGF0aCBmaWxsPSJub25lIiBzdHJva2U9IiNmZmZmZmYiIHN0cm9rZS1saW5lY2FwPSJyb3VuZCIgc3Ryb2tlLWxpbmVqb2luPSJyb3VuZCIgc3Ryb2tlLXdpZHRoPSIyIiBkPSJtMTQgN2wtNSA1bTAgMGw1IDUiLz48L3N2Zz4="
                     alt="Previous"
@@ -1540,7 +1545,7 @@
                   <span class="total"></span>
                 </div>
 
-                <button class="next-btn next-btn-1">
+                <button class="next-btn next-btn-1 z-30">
                   <img
                     src="data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHdpZHRoPSI1MCIgaGVpZ2h0PSI1MCIgdmlld0JveD0iMCAwIDI0IDI0Ij48cGF0aCBmaWxsPSJub25lIiBzdHJva2U9IiNmZmZmZmYiIHN0cm9rZS1saW5lY2FwPSJyb3VuZCIgc3Ryb2tlLWxpbmVqb2luPSJyb3VuZCIgc3Ryb2tlLXdpZHRoPSIyIiBkPSJtMTAgMTdsNS01bC01LTUiLz48L3N2Zz4="
                     alt="Next"
@@ -1560,7 +1565,7 @@
       >
         <div class="lg:hidden flex">
           <img
-            src="images//Desktop/FOOTER+FAQ/LogoFooter.webp"
+            src="images/logos/logo_purple_footer0.png"
             class="w-[85px]"
             alt=""
           />
@@ -1570,8 +1575,8 @@
         >
           <div class="hidden lg:block self-center">
             <img
-              src="images//Desktop/FOOTER+FAQ/LogoFooter.webp"
-              class="w-[85px]"
+              src="images/logos/logo_purple_footer0.png"
+              class="w-[60px]"
               alt=""
             />
           </div>
@@ -1594,7 +1599,7 @@
             </ul>
           </div>
 
-          <div class="flex flex-col gap-6">
+          <!-- <div class="flex flex-col gap-6">
             <h3 class="text-lg font-bold font-Poppins">Company Details</h3>
             <ul class="flex flex-col gap-2 font-Mulish text-sm">
               <li>Name: <span class="dyn-name"></span></li>
@@ -1605,7 +1610,7 @@
               <li>Legal form : [LOREM IPSUM]</li>
               <li>Social object : ADVERTISING AND MARKETING</li>
             </ul>
-          </div>
+          </div> -->
         </article>
         <div class="flex flex-col items-center gap-5">
           <hr class="w-[80%] lg:w-full h-[1px]" />
