chore: footer legal section cursor change

--- a/index.html
+++ b/index.html
@@ -1593,9 +1593,15 @@
           <div class="flex flex-col gap-6">
             <h3 class="text-lg font-bold font-IBM">Legal</h3>
             <ul class="flex flex-col gap-2 font-Mulish text-sm">
-              <li onclick="clickModal('privacy-modal')">Privacy Policy</li>
-              <li onclick="clickModal('terms-modal')">Terms and Conditions</li>
-              <li onclick="clickModal('cookies-modal')">Cookies</li>
+              <li onclick="clickModal('privacy-modal')" class="cursor-pointer">
+                Privacy Policy
+              </li>
+              <li onclick="clickModal('terms-modal')" class="cursor-pointer">
+                Terms and Conditions
+              </li>
+              <li onclick="clickModal('cookies-modal')" class="cursor-pointer">
+                Cookies
+              </li>
             </ul>
           </div>
 
